Fix errorprone build and warnings